<resources>
    <string name="app_name">FelixSport</string>
    <string name="text_primary">Sport Name</string>
    <string name="text_subtitle">Short Description</string>
    <string name="image_description">Gambar</string>
    <string name="menu_favorite">FAVORITE</string>
    <string name="text_title">Sport Name</string>
    <string name="text_type">Sport Type</string>
    <string name="text_desc">Description Detail Sport</string>
    <string name="error">Opps… There is something happened</string>
    <string name="title_favorite">Favorite</string>
    <string name="desc">Deskription</string>
</resources>